--- a/public/styles.css
+++ b/public/styles.css
@@ -1,23 +1,26 @@
 *, body {
   box-sizing: border-box;
 }
+:root {
+  --purple-900: #512DA8;
+}
 body {
   min-height: 100vh;
   font-family: 'Lato', 'Helvetica', sans-serif;
   box-sizing: border-box;
-
 }
 .rz-header {
   margin-bottom: 32px;
 }
 .rz-header__logo {
+  margin-top: 24px;
   max-width: 240px;
 }
 .rz-page__content {
   padding-bottom: 64px;
 }
 .rz-content {
-  max-width: 1080px;
+  max-width: 768px;
   display: block;
   margin: 0 auto;
 }
@@ -54,6 +57,7 @@ body {
 }
 .rz-external-services__item {
   padding: 16px;
+  position: relative;
 }
 .rz-external-services__item:before {
   content: '';
@@ -68,10 +72,36 @@ body {
   margin-right: 8px;
 }
 .rz-external-services__item.issue:before {
-  background-image: url('icons/red-x.svg');
+  background-image: url('icons/issue.svg');
 }
 .rz-external-services__item.loading:before {
   background-image: url('icons/loading.svg');
+}
+.rz-external-services__item[aria-label]:after {
+  content: attr(aria-label);
+  display: none;
+  position: absolute;
+  top: 40px;
+  left: 10px;
+  z-index: 5000;
+  pointer-events: none;
+  padding: 8px 10px;
+  line-height: 15px;
+  white-space: nowrap;
+  text-decoration: none;
+  text-indent: 0;
+  overflow: visible;
+  font-size: .9em;
+  font-weight: normal;
+  color: #fff;
+  text-shadow: 1px 0 1px #888;
+  background-color: #4e4e4e;
+  border-left: 6px solid var(--purple-900);
+  border-radius: 2px;
+  box-shadow: 1px 2px 6px rgba(0,0,0,0.3);
+}
+.rz-external-services__item[aria-label]:hover:after, [aria-label]:focus:after {
+  display: block;
 }
 .rz-status-updates__list {
   margin-top: 8px;
@@ -96,7 +126,8 @@ body {
   align-self: flex-end;
   height: 64px;
 }
-@media only screen and (max-width: 1080px) {
+
+@media only screen and (max-width: 768px) {
   .rz-external-services {
     display: flex;
     flex-direction: row;
